Created the navbar and created many pages for this project

--- a/app/src/layouts/home.pug
+++ b/app/src/layouts/home.pug
@@ -47,7 +47,8 @@ block header
             "/skills/index.html",
             "Explore",
             `outline outline-solid outline-green-500 
-            outline-offset-2 text-xl px-10 py-4`
+            outline-offset-2 text-xl px-10 py-4
+            `
             
             ).  
 
