--- a/app/src/mixins/home-btn.pug
+++ b/app/src/mixins/home-btn.pug
@@ -1,5 +1,5 @@
 mixin homeBtn(link, text, extraClasses="")
-    a.uppercase.bg-green-500.text-gray-50.px-3.py-4.z-index-5(
+    a.uppercase.bg-green-500.text-gray-50.px-3.py-4(
         href=link, 
         class=`transition transform shadow-sm shadow-green-300  
         hover:text-green-500 hover:bg-green-300
