--- a/app/src/layouts/main.pug
+++ b/app/src/layouts/main.pug
@@ -1,6 +1,6 @@
 
 include ../mixins/navbar.pug
-
+<!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
 +navbar
 
 header 
