--- a/app/src/mixins/cover.pug
+++ b/app/src/mixins/cover.pug
@@ -2,6 +2,6 @@
 
 mixin cover(classNames)
     
-    .absolute.top-0.left-0.bottom-0.right-0.z-index-1(class=classNames)
+    .absolute.top-0.left-0.bottom-0.right-0(class=classNames)
 
 
