--- a/app/src/mixins/navbar.pug
+++ b/app/src/mixins/navbar.pug
@@ -1,5 +1,57 @@
+
+
+
 mixin navbar
-    nav.text-gray-900.flex
-        .container.flex.flex-wrap
-            a(href="/home/index.html") Home
-            a(href="/index/index.html") Main
+
+
+    - const links = ["home", "skills", "products"]
+
+
+    mixin hamburger
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+            <path d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"/>
+        </svg>
+    
+    mixin close
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+            <path d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z"/>
+        </svg>
+
+
+    
+    nav
+        
+        button.fixed.z-index-1.text-green-500.cursor-pointer(id="sidebar-button"
+        class=" w-16 h-16 px-1 py-3 "
+        )
+            
+            +hamburger 
+        
+        aside.absolute.top-0.bottom-0.left-0.z-index-2.transition(
+            class=`bg-gray-50 w-80 transform duration-400 ease-in-out
+             -translate-x-full
+            `
+            id="sidebar"
+        )
+            .h-16.flex.p-4.justify-end
+                
+                .text-gray-500#close-button(
+                    class="transition transform duration-500 ease-in hover:text-red-500 hover:scale-105 active:scale-95"
+                )
+                    
+                    +close
+
+            ul.list-none.capitalize
+                for link in links
+
+                    li.h-24.p-4(
+                        class=`hover:bg-green-300 hover:border-l-2
+                        hover:border-green-500 hover:border-solid`
+                    )
+
+                        a(href=`/${link}/index.html`) #{link}  
+
+
+
+
+        
