--- a/app/src/layouts/about.pug
+++ b/app/src/layouts/about.pug
@@ -4,6 +4,8 @@
 extend ./main.pug
 
 include ../mixins/section-center.pug
+include ../mixins/section-title.pug
+include ../mixins/home-btn.pug
 
 
 block main 
